<resources>
    <string name="app_name">ProPal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="action_logout">Logout</string>
    <string name="action_quit">Quit</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_label">Title:</string>
    <string name="group_title_hint">Enter a group name</string>
    <string name="create_group_btn">Create Group</string>
    <string name="error_text">Error</string>
    <string name="group_colour_description">The colour that is picked for each group</string>
    <string name="title_activity_test_login">Sign in</string>
    <string name="error_invalid_title">Please enter a valid title</string>
    <string name="close_btn">Close</string>

    <!-- Strings related to login -->
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="back_btn">Back</string>
    <string name="username_prompt">Username</string>
    <string name="password_prompt">Password</string>
    <string name="email_prompt">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_no_email">Please enter an email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_no_password">Please enter a password</string>
    <string name="error_invalid_short_password">This password is too short</string>
    <string name="error_invalid_long_password">This password is too long</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_no_username">Please enter a username</string>
    <string name="error_invalid_short_username">This username is too short</string>
    <string name="error_invalid_long_username">This username is too long</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to the chat -->
    <string name="send_btn">Send</string>
    <string name="enter_message">Type a message</string>
    <string name="title_activity_chat_select">ChatSelectActivity</string>
    <string name="chat_title_tv">Chat Name</string>
    <string name="create_chat_btn">Create Chat</string>
    <string name="chat_title_hint">Enter a chat name</string>
    <string name="action_select_chat">Select Chat</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="addItem">addItem</string>
    <string name="title_activity_new_journal_test">Create a Journal</string>
    <string name="title_activity_journal_list">Journal List</string>
    <string name="title_activity_entry_list">Journal Entries</string>
    <string name="title_activity_entry_view">Journal Entry</string>
    <string name="title_activity_new_entry">Create a new Entry</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="emptyResults">No results found</string>
    <string name="title_activity_edit_entry">Edit</string>
    <string name="title_activity_history_view">Journal Entry History</string>
    <string name="title_activity_attachment_view">Attachments</string>
    <string name="already_have_account">Already have an account? Click here</string>
    <string name="create">CREATE</string>
    <string name="reset">RESET</string>
</resources>
