<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:icon="@drawable/ic_action_add"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        android:id="@+id/action_add"
        android:title="@string/addItem"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />

    <item android:title="@string/logout"
        android:id="@+id/action_logout"
        app:showAsAction="never"
        android:orderInCategory="99"
        />

    <item
        android:id="@+id/action_reset_password"
        android:orderInCategory="100"
        android:title="@string/action_reset_password"
        app:showAsAction="never" />

</menu>