<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cabbage.sdpjournal.LoginActivity">

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_prompt"
        android:inputType="textEmailAddress"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/password_prompt"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/login_btn"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/register_btn"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForgotPassword"
            android:background="@android:color/transparent"
            android:text="Forgot Password?"
            android:textColor="@color/colorAccent"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</LinearLayout>